Add additional functionality

--- a/musicapp/app/views/layouts/application.html.erb
+++ b/musicapp/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body background="https://static.vecteezy.com/system/resources/thumbnails/000/139/378/small/old-grunge-musical-notes-background.jpg">
+  <body background="http://hdqwalls.com/wallpapers/your-lie-in-april-anime-fp.jpg">
   <head>
     <title>Musicapp</title>
     <%= csrf_meta_tags %>
